--- a/app/assets/stylesheets/phone_number.scss
+++ b/app/assets/stylesheets/phone_number.scss
@@ -1,37 +1,28 @@
 .phone__container{
   .phone__title{
-    padding: 32px;
-    font-size: 22px;
-    font-weight: 600;
-    border-bottom: 1px solid #f5f5f5;
-    text-align: center;
-    line-height: 1.4;
+    @include registration-title;
   }
   .phone__content{
-    padding: 40px 40px 64px;
-    &__box{
-      max-width: 343px;
-      margin: 0 auto;
-      .phone__form__group{
-        @include form-default;
-        margin-top: 0px;
-        label{
-          font-size: 14px;
-        }
+    @include registration__content;
+    .phone__form__group{
+      @include form-default;
+      margin-top: 0px;
+      label{
+        font-size: 14px;
       }
     }
-  }
-  p{
-    margin: 8px 0 0;
-    line-height: 1.5;
-    font-size: 14px;
-  }
-  .btn-red{
-    margin-top: 32px;
-    @include button-red;
-  }
-  .link-right{
-    @include link_right;
-    margin-top: 32px;
+    p{
+      margin: 8px 0 0;
+      line-height: 1.5;
+      font-size: 14px;
+    }
+    .btn-red{
+      margin-top: 32px;
+      @include button-red;
+    }
+    .link-right{
+      @include link_right;
+      margin-top: 32px;
+    }
   }
 }
