--- a/app/views/user_identifications/index.html.haml
+++ b/app/views/user_identifications/index.html.haml
@@ -13,24 +13,14 @@
       = render partial:'form-user-text',locals:{index:'お名前',content:'樋口 翔'}
       = render partial:'form-user-text',locals:{index:'お名前カナ',content:'ヒグチ ショウ'}
       = render partial:'form-user-text',locals:{index:'生年月日',content:'1994/07/29'}
-      = render partial:'mypage_address_form',locals:{label:"郵便番号",example:"例)1234567"}
-      .mypage-info-form-box
-        %label 都道府県
-        %span 任意
-        .select_wrap
-          %select
-            %option --
-            - Prefecture.all.each do |element|
-              %option{value:element.name}= element.name
-          %i.fas.fa-chevron-down
-      = render partial:'mypage_address_form',locals:{label:"市区町村",example:"例)横浜市緑区"}
-      = render partial:'mypage_address_form',locals:{label:"番地",example:"例)青山1-1-1"}
-      = render partial:'mypage_address_form',locals:{label:"建物名",example:"例)柳ビル103"}
-      .mypage-info-form-box
-        %button{type:"submit",class:"btn-red"} 登録する
-      .mypage-info-form-box
+      = render partial:'render/input-form-optional',locals:{label:"郵便番号",example:"例)1234567"}
+      = render partial:'render/prefecture-optional'
+      = render partial:'render/input-form-optional',locals:{label:"市区町村",example:"例)横浜市緑区"}
+      = render partial:'render/input-form-optional',locals:{label:"番地",example:"例)青山1-1-1"}
+      = render partial:'render/input-form-optional',locals:{label:"建物名",example:"例)柳ビル103"}
+      = render partial:'render/input-form-button',locals:{name:"登録する"}
+      -# .input-form-box
+      -#   %button{type:"submit",class:"btn-red"} 登録する
+      .input-form-box
         = render partial:"render/link_right",locals:{text:'本人情報の登録について',address:"/"}
-        -# .link-right
-        -#   = link_to('本人情報の登録について',"/")
-        -#   %i.fas.fa-chevron-right
 = render 'top/footer'
