--- a/app/assets/stylesheets/users/_mypage-sidebar.scss
+++ b/app/assets/stylesheets/users/_mypage-sidebar.scss
@@ -7,6 +7,7 @@
   font-size: 14px;
     
   .mypage-nav-list {
+
     
     .mypage-nav-list-itemavtive {
       background: #eee;
@@ -23,27 +24,36 @@
       }
     }
 
+    .mypage-nav-list-itemavtive:hover {
+      i{ 
+        right: 5%;
+      }
+    }
+
     .mypage-nav-list-item {
       background: #fff;
       position: relative;
       padding: 16px;
       height: 16px;
       border-top: 1px solid #eee;
-
-    .mypage-nav-list-item:hover {
-      background: #333;
-      // position: relative;
-      // padding: 16px;
-      // height: 16px;
-      // border-top: 1px solid #eee;
-    }
       i{
         position: absolute;
         right: 8%;
         top: 35%;
+        color: darkgrey;
+      }
+    }
+    
+    .mypage-nav-list-item:hover {
+      background: #fafafa;
+      i{ 
+        // transform: translate(4px, -50%);
+        right: 5%;
+        color: black;
       }
     }
   }
+}
 
   h1 {
     background: #eee;
@@ -53,5 +63,4 @@
     border-bottom: 8px solid #eee;
   }
 
-}
 
