--- a/app/views/users/_mypagesidebar2.html.haml
+++ b/app/views/users/_mypagesidebar2.html.haml
@@ -1,7 +1,4 @@
 %li.mypage-nav-list-itemavtive
-  -# %a{:href => "https://saruwakakun.com/"} サルワカへジャンプ！= mypagesidebar2
-  %a{href: "/"} 
-  = mypagesidebar2
-
+  =link_to(mypagesidebar2,'/users',)
   %i.fas.fa-chevron-right
 
