--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -53,7 +53,7 @@
           %span.listing__form__detail__box__form-group__require
             必須
           %select.listing__form__detail__box__form-group__category-select
-            %option --
+            %option ---
             - Size.all.each do |ele|
               %option{value:ele.name}= ele.name
 
@@ -63,13 +63,10 @@
           %span.listing__form__detail__box__form-group__require
             必須
           %select.listing__form__detail__box__form-group__category-select
-            %option{value: ""} ---
-            %option{value: "1"} 新品、未使用
-            %option{value: "2"} 未使用に近い
-            %option{value: "3"} 目立った傷や汚れなし
-            %option{value: "4"} やや傷や汚れあり
-            %option{value: "5"} 傷や汚れあり
-            %option{value: "6"} 全体的に状態が悪い
+            %option ---
+            - Status.all.each do |ele|
+              %option{value: ele.name}= ele.name
+
   
     .listing__form__delivery
       %label.listing__form__delivery__title
@@ -159,8 +156,3 @@
       =image_tag 'logo-gray.svg'
     %p
       ©2019Mercari
-  
-
-
-
-
