--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,4 +1,5 @@
 .listing-edit
   = render "shared/new-header"
-  = render "shared/new-listing-form"
+  = render "shared/new-form"
+  = render "shared/new-button"
   = render "shared/new-footer"
