--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,4 +1,5 @@
 .listing
   = render "shared/new-header"
-  = render "shared/listing-form"
+  = render "shared/new-listing-form"
+  = render "shared/new-button"
   = render "shared/new-footer"
