--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -207,21 +207,31 @@
         }
       }
     }
-    &__last{
+  }
+}
+.listing__last{
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  &__box{
+    border-top: 1px solid #eee;
+    background-color: white;
+    width: 700px;
+    margin: 0 auto;
+    &__attention{
       padding: 40px;
-      border-top: 1px solid #eee;
-      &__attention{
-        font-size: 14px;
-        a{
-          color: #0099e8;
-          text-decoration: none;
-        }
-        a:hover{
-          @include a-tag-hover;
-        }
+      font-size: 14px;
+      a{
+        color: #0099e8;
+        text-decoration: none;
       }
+      a:hover{
+        @include a-tag-hover;
+      }
+    
       .btn-default{
-        margin: 40px 0 0;
+        margin: 40px auto;
         display: block;
         width: 100%;
         line-height: 48px;
@@ -248,6 +258,7 @@
     }
   }
 }
+
 .listing-footer{
   height: 220px;
   background-color: #f5f5f5;
