商品が売り切れの場合は購入ボタンを表示しない
#WHAT
 商品が売り切れの場合は購入ボタンを表示しない
#WHY
 売り切れで在庫のない商品の購入を防ぐため

--- a/app/assets/stylesheets/products/products-detail.scss
+++ b/app/assets/stylesheets/products/products-detail.scss
@@ -109,6 +109,16 @@
         color: #fff;
       }
   }
+  &__sold-out__button {
+    background-color: #aaa;
+    width: 85%;
+    height: 60px;
+    margin: 0 auto;
+    font-size: 25px;
+    color: #fff;
+    text-align: center;
+    line-height: 60px;
+  }
     &__comment {
       margin: 30px;
       font-size: 18px;
